Fixed the layout of the Movie Details page, adding a MovieDetails.scss file.  Also fixed some layout issues in the movie grouping component.

--- a/src/styles/custom/components/MovieCard.scss
+++ b/src/styles/custom/components/MovieCard.scss
@@ -2,6 +2,7 @@
   @include card-border-2-hover;
   margin-bottom: 15px;
   min-width: 155px;
+  max-width: 170px;
   height: 280px;
   a {
     p {
