--- a/src/styles/custom/components/MovieGrouping.scss
+++ b/src/styles/custom/components/MovieGrouping.scss
@@ -2,6 +2,6 @@
   cursor: pointer;
 }
 
-.genreRow, .genreMovies, .genreTitle {
-  margin: 0;
+.genreTitle {
+  padding-left: 15px;
 }
