--- a/src/styles/custom/index.scss
+++ b/src/styles/custom/index.scss
@@ -3,6 +3,7 @@ html, body {
   background-color: $off-white;
 }
 
+// bootstrap reset
 .container-fluid {
   min-height: 100%;
   margin: 0;
@@ -11,4 +12,6 @@ html, body {
 
 .row {
   max-width: 100%;
+  padding: 0;
+  margin: 0;
 }
